项目还有两个功能没有做

--- a/src/main/webapp/stat/chart/factorysale/index.html
+++ b/src/main/webapp/stat/chart/factorysale/index.html
@@ -18,7 +18,7 @@
 	<script type="text/javascript">
 		// <![CDATA[		
 		var so = new SWFObject("../../../components/chart/ampie_1.6.4.1/ampie/ampie.swf", "ampie", "660", "400", "8", "#FFFFFF");
-		so.addVariable("path", "../../../components/chart/ampie_1.6.4.1/ampie/");
+		so.addVariable("path", "../../../components/chart/ampie_1.6.4.1/ampie");
 		so.addVariable("settings_file", encodeURIComponent("ampie_settings.xml"));                // you can set two or more different settings files here (separated by commas)
 		so.addVariable("data_file", encodeURIComponent("data.xml"));
     		
@@ -31,8 +31,6 @@
 //  so.addVariable("error_loading_file", "ERROR LOADING FILE");                                     // you can set custom "error loading file" text here
 		so.write("flashcontent");
 		// ]]>
-		
-		
 	</script>
 <!-- end of ampie script -->
 </div>
